<resources>
    <string name="app_name">Amigo Secreto</string>
    <string name="btn_criar_sorteio">Novo Sorteio</string>
    <string name="btn_historico">Historico de sorteios</string>
    <string name="txt_codigo">Insira aqui seu código</string>
    <string name="btn_codigo">Revelar Amigo Secreto</string>
    <string name="btn_sorteio_prencial">Sorteio Presencial</string>
    <string name="btn_sorteio_online">Sorteio Online</string>
    <string name="txt_nome_participante">Nome do participante</string>
    <string name="btn_adicione_participante">↓ Novo participante ↓</string>
    <string name="btn_realizar_sorteio">Realizar sorteio</string>
    <string name="txt_compartilhe_resultado">Compartilhe o Resultado</string>
    <string name="txt_lista_participantes">Lista de participantes</string>
    <string name="txt_confirma_nome">Seu nome é ?</string>
    <string name="txt_codigo_valido">Por favor, insira um código válido.</string>
    <string name="txt_memorizei">Memorizei !</string>
    <string name="txt_seu_amigo_secreto_e">Seu amigo secreto é:</string>
    <string name="txt_nome_sorteio">Insira o nome do sorteio:</string>
    <string name="txt_historico">Historico de Sorteios</string>
    <string name="btn_limpar_historico">Limpar Histórico</string>
</resources>