<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frament_participantes_online"
    android:background="@color/blue">

    <LinearLayout
        android:id="@+id/container_geral"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/btn_sorteio_online"/>

        <TextView
            android:id="@+id/textView3"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/txt_adicionar_participantes" />

        <Button
            android:id="@+id/btn_adicionar_participante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_adicione_participante" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/container_participantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Conteúdo do ScrollView -->
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_realizar_sorteio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_realizar_sorteio" />
    </LinearLayout>


</RelativeLayout>
