<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_participantes"
    android:background="@color/cor1">

    <LinearLayout
        android:id="@+id/container_geral"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bk2_round">

            <TextView
                android:id="@+id/txt_titulo_participantes_tipo_sorteio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/lobster_regular"
                android:gravity="center"
                android:text="@string/btn_sorteio_online"
                android:textColor="@color/cor6"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/txt_nome_sorteio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/lobster_regular"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/txt_nome_sorteio"
                android:textColor="@color/cor2"
                android:textSize="25sp"
                android:background="@drawable/bk3_roundws"/>

        </LinearLayout>

        <android.widget.Button
            android:id="@+id/btn_adicionar_participante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bk4_round"
            android:textColor="@color/cor6"
            android:fontFamily="@font/lobster_regular"
            android:textSize="30dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_adicione_participante" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="List de participantes"> <!-- Add content description for accessibility -->
            <LinearLayout
                android:id="@+id/container_participantes"
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:contentDescription="Bloco de participantes"> <!-- Add content description for accessibility -->

                <!-- Lista de participantes aparece aqui, ao clicar no botão, instanciando linha_participante.xml -->
            </LinearLayout>
        </ScrollView>


        <android.widget.Button
            android:id="@+id/btn_realizar_sorteio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bk5_round"
            android:fontFamily="@font/lobster_regular"
            android:textSize="30dp"
            android:text="@string/btn_realizar_sorteio" />
    </LinearLayout>


</RelativeLayout>
