<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_main"
    android:background="@color/cor1">

    <TableLayout
        android:id="@+id/main_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/main_row_icon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/icone" />
        </TableRow>

        <TableRow
            android:id="@+id/main_row_realizarsorteio"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <android.widget.Button
                android:id="@+id/btn_realizar_sorteio"
                android:layout_width="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:textAlignment="center"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:background = "@drawable/bk3_round"
                android:textColor="@color/cor6"
                android:textSize="60sp"
                android:fontFamily="@font/lobster_regular"
                android:text="@string/btn_criar_sorteio" />

        </TableRow>

        <TableRow
            android:id="@+id/main_row_resgatarcodigo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal">

                <EditText
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:textAlignment="center"
                    android:id="@+id/text_codigo"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/txt_codigo"
                    android:background="@drawable/bk1_roundws"
                    android:textColor="@color/cor6"
                    android:padding="20dp"/>

                <android.widget.Button
                    android:id="@+id/btn_resgatarcodigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/bk2_round"
                    android:fontFamily="@font/lobster_regular"
                    android:text="@string/btn_codigo"
                    android:textColor="@color/cor6"
                    android:textSize="30sp" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/main_row_ad"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </TableLayout>
</FrameLayout>
